enhance: update dialog

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       '要走了哦',
       '你就不用送我啦',
       '也是时候再见了',
-      '不要悲伤哦，弥人君',
+      '弥人们不要悲伤哦',
       '有缘还是会再见的啦',
     ];
     let dialogIndex = 0;
