enhance: update dialog

--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@
     const dialogLines = [
       '要走了哦',
       '你就不用送我啦',
+      '永不完结的夏天结束了',
+      '但还会有下一个夏天的哦',
       '也是时候再见了',
       '弥人们不要悲伤哦',
       '有缘还是会再见的啦',
