--- a/index.html
+++ b/index.html
@@ -36,6 +36,33 @@
       background: radial-gradient(circle at center, rgba(80, 80, 80, 0.5) 0%, rgba(80, 80, 80, 0.2) 60%, rgba(80, 80, 80, 0) 100%);
     }
 
+    #friend-links {
+      position: fixed;
+      right: 32px;
+      bottom: 32px;
+      z-index: 100;
+      text-align: right;
+      background: rgba(0, 0, 0, 0.18);
+      border-radius: 12px;
+      padding: 10px 18px;
+      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.18);
+      display: flex;
+      gap: 1.5em;
+    }
+
+    .friend-link {
+      color: #fff;
+      text-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
+      font-size: 1.3em;
+      text-decoration: none;
+      font-family: 'Segoe UI', 'Arial', sans-serif;
+      transition: color 0.2s;
+    }
+
+    .friend-link:hover {
+      color: #ffd700;
+    }
+
     #countdown-container {
       position: fixed;
       top: 32px;
@@ -105,6 +132,7 @@
       cursor: pointer;
       background: rgba(0, 0, 0, 0);
     }
+
     #gal-dialog {
       position: fixed;
       left: 50%;
@@ -134,6 +162,7 @@
       display: none;
       transition: opacity 0.3s;
     }
+
     #water-mark {
       position: fixed;
       right: 0;
@@ -152,6 +181,11 @@
 </head>
 
 <body class="waiting">
+  <div id="friend-links">
+    <a href="https://t.supermiki.cn" target="_blank" rel="noopener" class="friend-link">动态存档</a>
+    <a href="https://button.supermiki.cn" target="_blank" rel="noopener" class="friend-link">弥按钮</a>
+  </div>
+  <div id="theend" style="display:none"></div>
   <div id="water-mark">图片提供：放射性巧克力慕斯</a> 画师：没炒熟的板栗</div>
   <div id="dialog-trigger"></div>
   <div id="gal-dialog"></div>
@@ -159,12 +193,11 @@
   <div id="countdown-container">
     <span id="countdown-text">剩余00分钟00秒</span>
   </div>
-  <div id="theend" style="display:none"></div>
   <audio id="ed-audio" src="https://cdn.mihiru.com/mikitube/media/ED.mp3" preload="auto"></audio>
   <script>
     // 目标时间（中国标准时间 UTC+8）
     // 2025-09-20 23:59:00 UTC+8
-    const target = new Date(Date.UTC(2025, 8, 20, 15, 19, 0)); // 8小时差
+    const target = new Date(Date.UTC(2025, 8, 20, 15, 18, 0)); // 8小时差
     const body = document.body;
     const text = document.getElementById('countdown-text');
     const theend = document.getElementById('theend');
@@ -191,12 +224,12 @@
         const diff = Math.floor((now - target) / 1000);
         const min = pad(Math.floor(diff / 60));
         const sec = pad(diff % 60);
-        text.textContent = `${min}:${sec}`;
+        text.textContent = `已离开${min}分钟${sec}秒`;
         if (body.className !== 'ended') body.className = 'ended';
         theend.style.display = '';
         if (!edPlayed) {
           edAudio.play().then(() => edPlayed = true);
-          
+
         }
       }
     }
