--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     }
 
     body.ended #countdown-container {
-      top: calc(100% - 3.5em);
+      top: 1rem;
       left: 50%;
       transform: translate(-50%, -50%);
       min-width: 220px;
