--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   <div id="countdown-container">
     <span id="countdown-text">剩余00分钟00秒</span>
   </div>
-  <audio id="ed-audio" src="https://cdn.mihiru.com/mikitube/media/ED.mp3" preload="auto"></audio>
+  <audio id="ed-audio" src="https://cdn.mihiru.com/mikitube/media/ED.mp3" preload="auto" loop></audio>
   <script>
     // 目标时间（中国标准时间 UTC+8）
     // 2025-09-20 23:59:00 UTC+8
